# MiniGo

./: .gitignore  .ocamlformat  Makefile  README.md  dune-project  mini_go.opam
lib/: ast_loc.ml  ast_typ.ml  checker.ml  checker.mli  dune  env.ml  go2c.ml  go2c.mli  lexer.mll  location.ml  parser.mly  pretty_error.ml  print_ast.ml  print_ast.mli  print_tokens.ml  print_tokens.mli
test/: dune  mini_go.ml
test/examples/: factorial.go
test/invalid/: builtin_call_error.go  const_init_error.go  missing_func_arguments.go  type_mismatch.go  unused_var.go
test/valid/: functions_as_value.go  playing_with_strings.go
